enter button fix on mobile

--- a/src/client/components/EditorExtended/components/addbutton.less
+++ b/src/client/components/EditorExtended/components/addbutton.less
@@ -41,7 +41,7 @@
     margin-top: 10px;
 
     &_comment {
-      width: 300px;
+      width: 285px;
     }
 
     @media @small {
